# rpa-landuse-viewer

./: .coverage  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Home.py  LICENSE  MANIFEST.in  PROJECT_SCOPE.md  README.md  README.rst  README_semantic_layers.md  add_ensemble_scenario.py  add_ensemble_scenario.sh  add_ensemble_scenarios.sh  add_gcm_ensemble_scenarios.py  add_gcm_ensemble_scenarios.sh  add_rcp_ensemble_scenarios.py  add_rcp_ensemble_scenarios.sh  add_ssp_ensemble_scenarios.py  add_ssp_ensemble_scenarios.sh  app.py  convert_json_to_parquet.py  create_regional_analysis.py  create_regional_layers.py  create_semantic_layers.py  data_loader.py  debug_query.py  get_answers.py  inspect_db.py  logs-mihiarc-rpa-landuse-main-app.py-2025-05-15T23_00_45.466Z.txt  logs-mihiarc-rpa-landuse-main-app.py-2025-05-15T23_04_30.294Z.txt  pyproject.toml  pytest.ini  query_db.py  query_duckdb.py  query_regional_data.py  query_semantic_layers.py  requirements.txt  run_tests.sh  (+9 more)
.streamlit/: config.py  config.toml  secrets.toml
.venv-py311/: pyvenv.cfg
RDS-2023-0026/Data/: _variable_descriptions.csv
backup/database/: add_rpa_regions.sql  init.sql  rpa_landuse.db-journal  update_schema.sh
backup/deprecated/utils/: shared.py
backup/src/db/: advanced_queries.py  common_queries.py  rpa_regions.py
cfg/: regions.yml
data/database/: Dockerfile.dockerfile  README.md  add_state_groups.sql  create_avg_scenario.sh  create_avg_scenario_view.sql  create_land_use_summary.sql  init.sql  populate_states.sql  sample_data.sql  update_rpa_regions.sh  update_schema.sh
datasets/pai-personal-97c70/rpa-landuse-state-transitions/: schema.yaml
docs/: DATABASE_SCHEMA.md  app_notes.md  common_queries.md  current_schema.sql  duckdb_cli_cheatsheet.md  duckdb_cli_guide.md  epic2_progress_report.md  land_use_queries.md  phase1_data_processing.md  query_results.md  schema_stats.md  testing_progress_report.md
docs/archive/: pandasai-streamlit-dev-plan.md  phase2_query_engine.md  phase3_export_framework.md
docs/duckdb/: duckdb_cli_cheatsheet.md  duckdb_cli_guide.md  handling_foreign_keys.md
docs/luc-db/: DATABASE_SCHEMA.md  average_scenario_implementation.md
docs/pandasai/: README_semantic_layers.md  duckdb_to_pandasai_guide.md
docs/rpa_data/: rpa_landuse_model_diagram_new.md  variable_descriptions.md
examples/: create_visualizations.py  test_visualizations.py
pages/: 01_Transition_Analysis.py  02_Spatial_Analysis.py  03_Regional_Analysis.py  04_Advanced_Analysis.py  Transition_Analysis.py
scripts/: publish.sh
src/: __init__.py  check_data.py  get_answers.py  inspect_data.py  load_to_mysql.py  show_urban_expansion.py
src/api/: __init__.py  api_cache.py  cache.py  config.py  database.py  main.py  models.py  queries.py  rate_limit.py  validation.py
src/data_setup/: README.md  __init__.py  converter.py  db_loader.py  import_landuse_data.py  setup.py  validator.py
src/db/: __init__.py  add_ensemble_scenario.py  analysis_repository.py  base_repository.py  database.py  import_landuse_data.py  import_parquet_data.py  initialize_database.py  land_use_repository.py  optimize_database.py  queries.py  region_repository.py  rpa_regions.py  schema_manager.py
src/pandasai/: __init__.py  layers.py  query.py
src/rpa_landuse/: cli.py
src/rpa_landuse/commands/: __init__.py  create_regional_layers.py  create_semantic_layers.py  query_duckdb.py  query_pandasai.py
src/rpa_landuse/db/: __init__.py
src/rpa_landuse/pandasai/: __init__.py  layers.py  query.py
src/rpa_landuse/utils/: __init__.py
src/rpa_landuse_viewer/: __init__.py  cli.py
src/rpa_landuse_viewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rpa_landuse_viewer/db/: __init__.py
src/rpa_landuse_viewer/utils/: __init__.py
src/setup/: setup_database.sh  update_rpa_data.sh
src/styles/: main.css  style.css
src/utils/: README.md  __init__.py  advanced_visualizations.py  config.py  data.py  data_loader.py  data_processing.py  data_validator.py  session_manager.py  shared.py  state_fips_mapping.py  update_counties_regions.py  update_county_names.py  visualization.py  visualizations.py
src/visualization/: land_use_viz.py
tests/: README.md  __init__.py  benchmark_duckdb.py  conftest.py  duckdb_testing_README.md  generate_query_results.py  requirements-test.txt  run_tests.sh  test_api.py  test_api_endpoints.py  test_common_queries.py  test_data_loader.py  test_duckdb.py  test_duckdb_db.py  test_duckdb_schema.py  test_duckdb_unit.py  test_land_use_analysis.py  test_landuse_data.py  test_queries.py  test_rpa_regions.py  test_sqlite_db.py  test_state_grouping.py  test_validation.py
