[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpa-landuse"
version = "0.1.0"
description = "RPA Land Use Projections Viewer"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {text = "MIT"}
authors = [
    {name = "USDA Forest Service: Resources Planning Act Assessment"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.22.0,<2.0.0",
    "pandas>=1.5.3,<2.3.0",
    "duckdb>=0.9.2",
    "pyarrow>=10.0.0",
    "matplotlib>=3.5.0,<3.8.0",
    "streamlit>=1.31",
    "httpx>=0.22.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0"
]

[project.optional-dependencies]
ai = [
    "pandasai>=2.0.0",
    "openai>=1.2,<2",
    "pandasai-openai>=0.1.5",
    "scipy>=1.8.0",
]
dev = [
    "pytest>=7.4.0",
    "flake8>=6.1.0",
    "black>=23.9.0",
]

[project.urls]
"Homepage" = "https://github.com/mihiarc/rpa-landuse"
"Bug Tracker" = "https://github.com/mihiarc/rpa-landuse/issues"

[project.scripts]
rpa-viewer = "rpa_landuse.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["rpa_landuse"]

[tool.setuptools.package-data]
rpa_landuse = ["**/*.sql"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "build", "dist", ".venv"] 